Clean up and use internal JDK APIs unapologetically